--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -70,3 +70,6 @@ n8n_monitor:
 
 nothingland:
   - com.theglitchh.NothingLand/com.theglitchh.NothingLand.activities.MainActivity
+
+huggingassist:
+  - org.woheller69.hugassist/org.woheller69.huggingchat.MainActivity
