--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -13,6 +13,8 @@
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
 
+torrents_digger:
+  - org.forthecommunity.torrentsdigger/org.forthecommunity.torrentsdigger.MainActivity
 
 becker_central_control:
   - com.centralcontrol.becker_central_control/com.centralcontrol.becker_central_control.MainActivity
