--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -75,3 +75,6 @@ nothingland:
 
 huggingassist:
   - org.woheller69.hugassist/org.woheller69.huggingchat.MainActivity
+
+eventbro:
+  - com.eventbro.app/com.eventbro.app.MainActivity
