--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,6 +12,14 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+pebblebee:
+  - com.pebblebee.pebblebeeplus/com.pebblebee.pebblebeeplus.main.MainActivity
+
+mesonet:
+  - org.mesonet.app/org.mesonet.app.MainActivity
+
+rune_craze:
+  - com.wall.RuneQuest/activities.MainActivity
 
 torrents_digger:
   - org.forthecommunity.torrentsdigger/org.forthecommunity.torrentsdigger.MainActivity
