Bring 3 icons back, lost from PR

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -15,11 +15,17 @@
 pebblebee:
   - com.pebblebee.pebblebeeplus/com.pebblebee.pebblebeeplus.main.MainActivity
 
-mesonet:
-  - org.mesonet.app/org.mesonet.app.MainActivity
-
 rune_craze:
   - com.wall.RuneQuest/activities.MainActivity
+
+bank_of_hydro:
+  -com.csiweb.digitalbanking.bk1762/com.csiweb.digitalbanking.MainActivity
+
+nelko:
+  - com.nelko.printer/com.ezink.app.nelko.ui.SplashActivity
+
+mexican_train:
+  - glowingeye.mexican_train_dominoes_gold/glowingeye.mexican_train_dominoes_gold.SplashScreen
 
 torrents_digger:
   - org.forthecommunity.torrentsdigger/org.forthecommunity.torrentsdigger.MainActivity
