new icon: Mesonet

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -18,6 +18,9 @@ pebblebee:
 rune_craze:
   - com.wall.RuneQuest/activities.MainActivity
 
+mesonet:
+  - org.mesonet.app/org.mesonet.app.MainActivity
+
 bank_of_hydro:
   -com.csiweb.digitalbanking.bk1762/com.csiweb.digitalbanking.MainActivity
 
