--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -95,3 +95,9 @@ huggingassist:
 
 eventbro:
   - com.eventbro.app/com.eventbro.app.MainActivity
+
+bingo_creator:
+  - com.brotherprojekt.bingo_creator/com.example.bingo_creator.MainActivity
+
+battle_of_285:
+  - jp.ne.sk_mine.android.game.battle_of_285/jp.ne.sk_mine.android.game.battle_of_285.MainActivity 
