--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -101,3 +101,6 @@ comet:
 
 orbitarr:
   - com.bluematter.orbitarr/com.bluematter.orbitarr.MainActivity
+
+atm_milano:
+  - it.atm.appmobile/com.hitachiapp.LaunchActivity
