--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -95,3 +95,12 @@ huggingassist:
 
 eventbro:
   - com.eventbro.app/com.eventbro.app.MainActivity
+
+comet:
+  - ai.perplexity.comet/ai.perplexity.comet.ui.CometActivity
+
+orbitarr:
+  - com.bluematter.orbitarr/com.bluematter.orbitarr.MainActivity
+
+atm_milano:
+  - it.atm.appmobile/com.hitachiapp.LaunchActivity
