--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -95,3 +95,9 @@ huggingassist:
 
 eventbro:
   - com.eventbro.app/com.eventbro.app.MainActivity
+
+mpvex:
+  - app.marlboroadvance.mpvex/app.marlboroadvance.mpvex.MainActivity
+
+birthday_adapter:
+  - org.birthdayadapter/org.birthdayadapter.ui.BaseActivity
