--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -96,6 +96,11 @@ huggingassist:
 eventbro:
   - com.eventbro.app/com.eventbro.app.MainActivity
 
+bingo_creator:
+  - com.brotherprojekt.bingo_creator/com.example.bingo_creator.MainActivity
+
+battle_of_285:
+  - jp.ne.sk_mine.android.game.battle_of_285/jp.ne.sk_mine.android.game.battle_of_285.MainActivity 
 comet:
   - ai.perplexity.comet/ai.perplexity.comet.ui.CometActivity
 
@@ -104,3 +109,5 @@ orbitarr:
 
 atm_milano:
   - it.atm.appmobile/com.hitachiapp.LaunchActivity
+
+retroachievements: {}
