--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -96,11 +96,18 @@ huggingassist:
 eventbro:
   - com.eventbro.app/com.eventbro.app.MainActivity
 
+mpvex:
+  - app.marlboroadvance.mpvex/app.marlboroadvance.mpvex.MainActivity
+
+birthday_adapter:
+  - org.birthdayadapter/org.birthdayadapter.ui.BaseActivity
+
 bingo_creator:
   - com.brotherprojekt.bingo_creator/com.example.bingo_creator.MainActivity
 
 battle_of_285:
   - jp.ne.sk_mine.android.game.battle_of_285/jp.ne.sk_mine.android.game.battle_of_285.MainActivity 
+
 comet:
   - ai.perplexity.comet/ai.perplexity.comet.ui.CometActivity
 
