new icon: MAGIS

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -118,3 +118,6 @@ atm_milano:
   - it.atm.appmobile/com.hitachiapp.LaunchActivity
 
 retroachievements: {}
+
+magis:
+  - com.msandroid.mobile/com.mobile.brasiltv.activity.SplashAty
