new icon: Kahon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -121,3 +121,6 @@ retroachievements: {}
 
 magis:
   - com.msandroid.mobile/com.mobile.brasiltv.activity.SplashAty
+
+kahon:
+  - com.amanoteam.kahon/eu.kanade.tachiyomi.ui.main.MainActivity
