new icon: Limbus Company

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -124,3 +124,6 @@ magis:
 
 kahon:
   - com.amanoteam.kahon/eu.kanade.tachiyomi.ui.main.MainActivity
+
+limbus_company:
+  - com.ProjectMoon.LimbusCompany/com.unity3d.player.UnityPlayerActivity
