new icon: District

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -127,3 +127,6 @@ kahon:
 
 limbus_company:
   - com.ProjectMoon.LimbusCompany/com.unity3d.player.UnityPlayerActivity
+
+district:
+  - com.application.zomato.district/com.application.zomato.gooutandroid.MainActivity
