new icon: Kuper

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -130,3 +130,6 @@ limbus_company:
 
 district:
   - com.application.zomato.district/com.application.zomato.gooutandroid.MainActivity
+
+kuper:
+  - ru.instamart/ru.smmd.superdelivery.MainActivity
