--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -118,3 +118,18 @@ atm_milano:
   - it.atm.appmobile/com.hitachiapp.LaunchActivity
 
 retroachievements: {}
+
+magis:
+  - com.msandroid.mobile/com.mobile.brasiltv.activity.SplashAty
+
+kahon:
+  - com.amanoteam.kahon/eu.kanade.tachiyomi.ui.main.MainActivity
+
+limbus_company:
+  - com.ProjectMoon.LimbusCompany/com.unity3d.player.UnityPlayerActivity
+
+district:
+  - com.application.zomato.district/com.application.zomato.gooutandroid.MainActivity
+
+kuper:
+  - ru.instamart/ru.smmd.superdelivery.MainActivity
