Added Migraine Insight icon & updated some older icons of mine

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,6 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+migraine_insight:
+  - com.shinynewapp.migraineinsight2/com.shinynewapp.migraineinsight2.MainActivity
