Add icon for OnePass

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,6 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+onepass:
+  - au.com.onepass.mobile.android/au.com.onepass.mobile.android.MainActivity
