new icon: Sinara Bank

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -15,3 +15,6 @@
 
 onepass:
   - au.com.onepass.mobile.android/au.com.onepass.mobile.android.MainActivity
+
+sinara:
+  - ru.skbbank.ib/ru.skblab.skbbank.feature.main.presentation.view.AppActivity
