new compinfo: Youla

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -18,3 +18,6 @@ onepass:
 
 sinara:
   - ru.skbbank.ib/ru.skblab.skbbank.feature.main.presentation.view.AppActivity
+
+youla:
+  - com.allgoritm.youla/com.allgoritm.youla.Launcher
