new icon: DomClick

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -21,3 +21,6 @@ sinara:
 
 youla:
   - com.allgoritm.youla/com.allgoritm.youla.Launcher
+
+domclick:
+  - ru.domclick.mortgage/ru.domclick.splash.ui.SplashActivity
