new icon: VK Video Live

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -24,3 +24,6 @@ youla:
 
 domclick:
   - ru.domclick.mortgage/ru.domclick.splash.ui.SplashActivity
+
+vk_video_live:
+  - live.vkplay.app/live.boosty.presentation.main.MainActivity
