--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -27,3 +27,6 @@ domclick:
 
 vk_video_live:
   - live.vkplay.app/live.boosty.presentation.main.MainActivity
+
+mriia:
+  - ua.gov.mriia.prod/ua.gov.mriia.main.MainActivity
