new icon: luckin coffee

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -30,3 +30,6 @@ vk_video_live:
 
 mriia:
   - ua.gov.mriia.prod/ua.gov.mriia.main.MainActivity
+
+luckin_coffee:
+  - com.luckin.client.i/com.luckin.client.intl.SplashActivity
