--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -15,3 +15,21 @@
 
 onepass:
   - au.com.onepass.mobile.android/au.com.onepass.mobile.android.MainActivity
+
+sinara:
+  - ru.skbbank.ib/ru.skblab.skbbank.feature.main.presentation.view.AppActivity
+
+youla:
+  - com.allgoritm.youla/com.allgoritm.youla.Launcher
+
+domclick:
+  - ru.domclick.mortgage/ru.domclick.splash.ui.SplashActivity
+
+vk_video_live:
+  - live.vkplay.app/live.boosty.presentation.main.MainActivity
+
+mriia:
+  - ua.gov.mriia.prod/ua.gov.mriia.main.MainActivity
+
+luckin_coffee:
+  - com.luckin.client.i/com.luckin.client.intl.SplashActivity
