add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,22 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+
+bimmercode:
+  - de.appomotive.bimmercode/de.appomotive.bimmercode.activities.MainActivity
+
+frog_weather:
+  - jp.miyavi.androiod.gnws/jp.miyavi.androiod.gnws.MainActivity
+
+laifen:
+  - com.lf.home/com.laifen.main.ui.SplashActivity
+
+landrys_select_club:
+  - net.landrysinc.lac/net.landrysinc.lac.MainActivity
+
+mi_tigo_el_salvador:
+  - com.juvomobileinc.tigoshop.sv/com.juvomobileinc.tigoshop.sv.MainActivity
+
+network_switch:
+  - com.supernova.networkswitch/com.supernova.networkswitch.presentation.ui.activity.MainActivity
