--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -31,3 +31,6 @@ mi_tigo_el_salvador:
 
 network_switch:
   - com.supernova.networkswitch/com.supernova.networkswitch.presentation.ui.activity.MainActivity
+
+avant:
+  - inc.zerofinancial.level/inc.zerofinancial.level.app.ui.loggedout.SplashActivity 
