--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -34,3 +34,30 @@ network_switch:
 
 avant:
   - inc.zerofinancial.level/inc.zerofinancial.level.app.ui.loggedout.SplashActivity 
+
+blinko:
+  - com.blinko.app/com.blinko.app.MainActivity
+
+happy_codex:
+  - com.ex3ndr.happy/com.ex3ndr.happy.MainActivity
+
+medium_unlocker:
+  - com.inulute.mediumunlocker/com.inulute.mediumunlocker.MainActivity
+
+microg_re:
+  - app.revanced.android.gms/org.microg.gms.ui.MainSettingsActivity
+
+nerd_steam:
+  - com.github.khanshoaib3.nerdsteam/com.github.khanshoaib3.nerdsteam.MainActivity
+
+orion_store:
+  - com.orion.store/com.orion.store.MainActivity
+
+plezy:
+  - com.edde746.plezy/com.edde746.plezy.MainActivity
+
+running_services_monitor:
+  - me.biplobsd.rsm/me.biplobsd.rsm.MainActivity
+
+shizuwall:
+  - com.arslan.shizuwall/com.arslan.shizuwall.MainActivity
