--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -61,3 +61,6 @@ running_services_monitor:
 
 shizuwall:
   - com.arslan.shizuwall/com.arslan.shizuwall.MainActivity
+
+nothing_recorder:
+  - com.nothing.soundrecorder/com.nothing.soundrecorder.MainActivity
