--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -64,3 +64,24 @@ shizuwall:
 
 nothing_recorder:
   - com.nothing.soundrecorder/com.nothing.soundrecorder.MainActivity
+
+arsenal:
+  - com.arsenal.official/com.arsenal.official.global.LaunchActivity
+
+beacons:
+  - ai.beacons.beacons/ai.beacons.beacons.MainActivity
+
+google_journal:
+  - com.google.android.apps.pixel.aurelius/com.google.android.apps.pixel.aurelius.app.TeaspoonActivity
+
+instagram_edits:
+  - com.instagram.basel/com.instagram.basel.mainactivity.BaselActivity
+
+matipay:
+  - com.matipay.vending/com.sitael.vending.ui.activity.SplashScreenActivity
+
+rebootnya:
+  - github.daisukikaffuchino.rebootnya/github.daisukikaffuchino.rebootnya.MainActivity
+
+sora:
+  - com.openai.sora/com.openai.sora.MainActivity
