--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -85,3 +85,9 @@ rebootnya:
 
 sora:
   - com.openai.sora/com.openai.sora.MainActivity
+
+hsbc:
+  - hk.com.hsbc.hsbchkmobilebanking/com.hsbc.mobilebanking.splash.SplashActivity
+
+dominos:
+  - com.dominos.ph/com.dominos.ph.MainActivity
