add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -91,3 +91,12 @@ hsbc:
 
 dominos:
   - com.dominos.ph/com.dominos.ph.MainActivity
+
+islanders_mobile:
+  - com.Coatsink.IslandersCozyCityBuilder/com.unity3d.player.UnityPlayerGameActivity
+
+online_portal_appfolio:
+  - com.appfolio.resident_portal/com.appfolio.resident_portal.BrowserLauncherActivity
+
+pixez:
+  - com.perol.asdpl.play.pixivez/com.perol.asdpl.pixivez.pure
