--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,8 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+fancy_pants:
+   - com.overthetopgames.fancypants
+
+touhou: {}
