--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -14,6 +14,11 @@
 #     - com.google.app/com.google.app.MainActivity
 
 fancy_pants:
-   - com.overthetopgames.fancypants
+   - com.overthetopgames.fancypants/com.overthetopgames.fancypants.LoadActivity
 
 touhou: {}
+
+smth:
+   - com.carrotpop.www.smth/com.ansca.corona.CoronaActivity
+
+delta_alt_3: {}
