--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,31 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+
+autosweep:
+  - com.balanceinquiry/com.balanceinquiry.MainActivity
+
+chagee:
+  - com.chagee.application/com.chagee.application.MainActivity
+
+elty:
+  - com.davincisalute.app/com.davincisalute.app.MainActivity
+
+esselunga:
+  - it.esselunga.mobile/it.esselunga.mobile.activity.EsselungaActivity
+
+mpt_drivehub:
+  - com.outsystemsenterprise.mptc.DriveHubProd/com.mptc.drivehub.presentation.login_activity.LoginActivity
+
+ph_manulife:
+  - com.manulife.asia.emmprd.api/com.manulife.asia.emmprd.api.shared.appIcon.AliasDefaultAppIcon
+
+sandisk_memory_zone:
+  - com.sandisk.smz2/com.sandisk.smz2.MainActivity
+
+vybe:
+  - com.indivara.bpi/ayCLy7.rHtZA7.gDDuc7.mjBDt5
+
+waltermart:
+  - com.waltermart.android.google.consumer/com.freshop.android.consumer.SplashActivity
