--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -40,3 +40,15 @@ vybe:
 
 waltermart:
   - com.waltermart.android.google.consumer/com.freshop.android.consumer.SplashActivity
+
+samsung_find:
+  - com.samsung.android.app.find/com.samsung.android.app.find.MainActivity
+
+xanh_sm:
+  - com.gsm.customer.gsm/com.gsm.customer.ui.splash.SplashActivity
+
+samsung_studio:
+  - com.sec.android.app.vepreload/com.sec.android.app.vepreload.singleedit.activity.ProjectShortcutActivity
+
+thunderbird_beta:
+  - net.thunderbird.android.beta/com.fsck.k9.activity.MainActivity
