--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -16,6 +16,8 @@
 fancy_pants:
    - com.overthetopgames.fancypants/com.overthetopgames.fancypants.LoadActivity
 
+fancy_pants_alt_1: {}
+
 touhou: {}
 
 smth:
