--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -13,6 +13,17 @@
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
 
+fancy_pants:
+   - com.overthetopgames.fancypants/com.overthetopgames.fancypants.LoadActivity
+
+fancy_pants_alt_1: {}
+
+touhou: {}
+
+smth:
+   - com.carrotpop.www.smth/com.ansca.corona.CoronaActivity
+
+delta_alt_3: {}
 
 autosweep:
   - com.balanceinquiry/com.balanceinquiry.MainActivity
