--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -63,3 +63,8 @@ samsung_studio:
 
 thunderbird_beta:
   - net.thunderbird.android.beta/com.fsck.k9.activity.MainActivity
+
+pou_3d:
+  - me.pou.app3d/com.unity3d.player.UnityPlayerActivity
+
+pou_3d_alt: {}
