--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -74,3 +74,12 @@ discord_kettu:
 
 kettu_manager:
   - cocobo1.pupu.manager/dev.beefers.vendetta.manager.ui.activity.MainActivity
+
+kitshn:
+  - de.kitshn.android/de.kitshn.AppActivity
+
+linkora:
+  - com.sakethh.linkora/com.sakethh.linkora.new_logo
+
+my_porsche:
+  - com.porsche.one/de.porsche.product.MainActivity
