add icon, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -83,3 +83,6 @@ linkora:
 
 my_porsche:
   - com.porsche.one/de.porsche.product.MainActivity
+
+meta_ai:
+  - com.facebook.stella/com.facebook.wearable.companion.silverstone.main.view.SilverstoneMainActivity
