--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -14,14 +14,14 @@
 #     - com.google.app/com.google.app.MainActivity
 
 fancy_pants:
-   - com.overthetopgames.fancypants/com.overthetopgames.fancypants.LoadActivity
+  - com.overthetopgames.fancypants/com.overthetopgames.fancypants.LoadActivity
 
 fancy_pants_alt_1: {}
 
 touhou: {}
 
 smth:
-   - com.carrotpop.www.smth/com.ansca.corona.CoronaActivity
+  - com.carrotpop.www.smth/com.ansca.corona.CoronaActivity
 
 delta_alt_3: {}
 
@@ -68,3 +68,21 @@ pou_3d:
   - me.pou.app3d/com.unity3d.player.UnityPlayerActivity
 
 pou_3d_alt: {}
+
+discord_kettu:
+  - cocobo1.pupu.app/com.discord.main.MainDefault
+
+kettu_manager:
+  - cocobo1.pupu.manager/dev.beefers.vendetta.manager.ui.activity.MainActivity
+
+kitshn:
+  - de.kitshn.android/de.kitshn.AppActivity
+
+linkora:
+  - com.sakethh.linkora/com.sakethh.linkora.new_logo
+
+my_porsche:
+  - com.porsche.one/de.porsche.product.MainActivity
+
+meta_ai:
+  - com.facebook.stella/com.facebook.wearable.companion.silverstone.main.view.SilverstoneMainActivity
