add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,9 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+croft_adventures:
+  - ca.hot.springs/org.renpy.android.PythonSDLActivity
+
+tomb_of_destiny:
+  - com.ultrababes.tod/org.renpy.android.PythonSDLActivity
