--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -18,3 +18,12 @@ croft_adventures:
 
 tomb_of_destiny:
   - com.ultrababes.tod/org.renpy.android.PythonSDLActivity
+
+adobe_firefly:
+  - com.adobe.firefly/com.adobe.firefly.home.FFHomeActivity
+
+blackbox_ai:
+  - com.blackbox.blackboxapp/com.blackbox.blackboxapp.MainActivity
+
+weather_wise:
+  - com.interactiveweather.weatherwise/com.interactiveweather.weatherwise.MainActivity
