--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -27,3 +27,9 @@ blackbox_ai:
 
 weather_wise:
   - com.interactiveweather.weatherwise/com.interactiveweather.weatherwise.MainActivity
+
+touch_hle:
+  - org.touchhle.android.preview/org.touchhle.android.MainActivity
+
+ikea:
+  - com.ikea.ksa.kompis/com.ikea.kompis.StartupActivity
