Add icons&compinfo (#1320)
* add icons, premium request

* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,24 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+croft_adventures:
+  - ca.hot.springs/org.renpy.android.PythonSDLActivity
+
+tomb_of_destiny:
+  - com.ultrababes.tod/org.renpy.android.PythonSDLActivity
+
+adobe_firefly:
+  - com.adobe.firefly/com.adobe.firefly.home.FFHomeActivity
+
+blackbox_ai:
+  - com.blackbox.blackboxapp/com.blackbox.blackboxapp.MainActivity
+
+weather_wise:
+  - com.interactiveweather.weatherwise/com.interactiveweather.weatherwise.MainActivity
+
+touch_hle:
+  - org.touchhle.android.preview/org.touchhle.android.MainActivity
+
+ikea:
+  - com.ikea.ksa.kompis/com.ikea.kompis.StartupActivity
