--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -72,3 +72,9 @@ slice_and_dice:
 
 wake_on_lan_wol:
   - co.uk.mrwebb.wakeonlan/co.uk.mrwebb.wakeonlan.MainActivity
+
+luli_reader:
+  - com.bennybar.luli_reader2/com.bennybar.luli_reader2.MainActivity
+
+mages:
+  - org.mlm.mages/org.mlm.mages.MainActivity
