--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -33,3 +33,48 @@ touch_hle:
 
 ikea:
   - com.ikea.ksa.kompis/com.ikea.kompis.StartupActivity
+
+anime_tv:
+  - com.amarullz.androidtv.animetvjmto/com.amarullz.androidtv.animetvjmto.MainActivity
+
+barclaycard:
+  - com.barclays.bca/com.barclays.android.registration.NRegSplashActivity
+
+duke_energy:
+  - com.dukeenergy.customerapp.release/com.dukeenergy.customerapp.application.LauncherActivity
+
+erewhon:
+  - com.erewhon.android/com.erewhon.android.MainActivity
+
+hitster:
+  - nl.jumbo.hitster/nl.q42.hitster.MainActivity
+
+hotwife_hotline:
+  - com.honeylust.hotwifehotline/org.renpy.android.PythonSDLActivity
+
+lloyds_mobile_banking:
+  - com.grppl.android.shell.CMBlloydsTSB73/com.halifax.halifax.GrappleActivity
+
+qfile_pro:
+  - com.qnap.qfile/com.qnap.qfile.ui.splash.SplashActivity
+
+riseio:
+  - com.riseio.Building/com.riseio.building.MainActivity
+
+royal_bank_of_scotland:
+  - com.rbs.mobile.android.rbs/co.uk.rbsg.mobile.android.feature.login.LoginActivity
+
+sap_concur:
+  - com.concur.breeze/com.concur.mobile.fiori.startup.ui.StartUpActivity
+
+slice_and_dice:
+  - com.com.tann.dice/com.tann.dice.AndroidLauncher
+
+wake_on_lan_wol:
+  - co.uk.mrwebb.wakeonlan/co.uk.mrwebb.wakeonlan.MainActivity
+
+luli_reader:
+  - com.bennybar.luli_reader2/com.bennybar.luli_reader2.MainActivity
+
+mages:
+  - org.mlm.mages/org.mlm.mages.MainActivity
