icons and comp info

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -78,3 +78,22 @@ luli_reader:
 
 mages:
   - org.mlm.mages/org.mlm.mages.MainActivity
+
+linked_in:
+  - com.linkedin.android/com.linkedin.android.authenticator.LaunchActivity
+  - com.linkedin.android/com.linkedin.android.authenticator.LaunchActivityDefault
+  - com.linkedin.android/com.linkedin.android.authenticator.YIRActivityAlias
+
+blinkit:
+  - com.grofers.customerapp/com.grofers.customerapp.DEFAULT
+  - com.grofers.customerapp/com.grofers.customerapp.DEEPAWALI
+  - com.grofers.customerapp/com.grofers.customerapp.NAVARATRI
+  - com.grofers.customerapp/com.grofers.customerapp.DIWALI
+  - com.grofers.customerapp/com.grofers.customerapp.CHRISTMAS
+
+unidays:
+  - com.myunidays/com.myunidays.home.MainActivity
+  - com.myunidays/com.myunidays.LaunchActivity
+
+jiohome:
+  - com.jio.home/com.jio.home.cleanarchitecture.common.screen.SplashActivity
