add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -97,3 +97,18 @@ unidays:
 
 jiohome:
   - com.jio.home/com.jio.home.cleanarchitecture.common.screen.SplashActivity
+
+adt_control:
+  - om.adt.adtcontrolalarm/com.alarm.alarmmobile.android.feature.auth.login.LoginActivity
+
+amcrest_view_pro_2:
+  - com.mm.android.AMCREST2/com.mm.android.base.devicemain.SplashActivity
+
+inkind:
+  - com.inkind.inkind/com.inkind.inkind.MainActivity
+
+lutron_app:
+  - com.lutron.mmw/com.lutron.mmw.activity.MyHomeActivity
+
+myfrontier:
+  - com.frontier.selfserve/com.frontier.selfserve.SplashScreenActivity
