--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -79,7 +79,7 @@ luli_reader:
 mages:
   - org.mlm.mages/org.mlm.mages.MainActivity
 
-linked_in:
+linked__in:
   - com.linkedin.android/com.linkedin.android.authenticator.LaunchActivity
   - com.linkedin.android/com.linkedin.android.authenticator.LaunchActivityDefault
   - com.linkedin.android/com.linkedin.android.authenticator.YIRActivityAlias
@@ -112,3 +112,36 @@ lutron_app:
 
 myfrontier:
   - com.frontier.selfserve/com.frontier.selfserve.SplashScreenActivity
+
+ente_locker:
+  - io.ente.locker/io.ente.locker.MainActivity
+
+bentleys_coffee:
+  - io.touchpoint.customerportal.bentley/io.touchpoint.demo.customerportal.sevenbrew.MainActivity
+
+doomfields:
+  - com.KJGames.Doomfields/com.unity3d.player.UnityPlayerActivity
+
+eden:
+  - dev.eden.eden_emulator/org.yuzu.yuzu_emu.ui.main.MainActivity
+
+emuready:
+  - com.producdevity.emureadylite/com.producdevity.emureadylite.MainActivity
+
+expandroid:
+  - com.dingleinc.texttoolspro/crc64a887e3ac456edbb0.MainActivity
+
+open_markdown_notes:
+  - net.basov.omn.fdroid/net.basov.omn.MainActivity
+
+sonic_rumble:
+  - com.sega.sonicrumble/com.sega.sxc.sxccommon.SxcActivity
+
+super_mario_bros_remastered:
+  - net.yrkl.smb1r/com.godot.game.GodotApp
+
+touchscreen_dead_pixels_repair:
+  - com.redpi.apps.touchscreendeadpixels/com.redpi.apps.touchscreendeadpixels.MainActivity
+
+umo_mobility:
+  - com.cubic.ctp.app/com.cubic.umolite.activity.LaunchActivity
