--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -145,3 +145,9 @@ touchscreen_dead_pixels_repair:
 
 umo_mobility:
   - com.cubic.ctp.app/com.cubic.umolite.activity.LaunchActivity
+
+mercedes:
+  - com.mbusa.mmusa.android/com.daimler.mycar.screen.splash.SplashActivity
+
+dead_cells:
+  - com.playdigious.deadcells.epic/com.playdigious.deadcells.mobile.DeadCells
