--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -151,3 +151,9 @@ mercedes:
 
 dead_cells:
   - com.playdigious.deadcells.epic/com.playdigious.deadcells.mobile.DeadCells
+
+raise_alarm:
+  - com.alijafari.raise/com.alijafari.raise.MainActivity
+
+revolut_x:
+  - com.revolut.revolutx/com.revolut.revolutx.launcher.RevolutXLauncherActivity
