--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -163,3 +163,6 @@ corriere_della_sera:
 
 gazzetta_dello_sport:
   - it.rcs.gazzettaflash/it.rcs.gazzettaflash.activities.SplashScreenActivity
+
+metrolist:
+  - com.metrolist.music/com.metrolist.music.MainActivityAlias
