Add icons&compinfo (#1326)
* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -157,3 +157,12 @@ raise_alarm:
 
 revolut_x:
   - com.revolut.revolutx/com.revolut.revolutx.launcher.RevolutXLauncherActivity
+
+corriere_della_sera:
+  - it.rcs.corriere/it.rcs.corriere.views.splash.activity.SplashActivity
+
+gazzetta_dello_sport:
+  - it.rcs.gazzettaflash/it.rcs.gazzettaflash.activities.SplashScreenActivity
+
+metrolist:
+  - com.metrolist.music/com.metrolist.music.MainActivityAlias
