Add "LINE Alt 1" icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -41,3 +41,6 @@ vivion_card:
 
 zonepane:
   - com.zonepane/com.twitpane.TwitPane
+
+line_alt_1:
+  - jp.naver.line.android/jp.naver.line.android.basic_1
