Rename from "LINE Alt 1" to "LINE Black"

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -42,5 +42,7 @@ vivion_card:
 zonepane:
   - com.zonepane/com.twitpane.TwitPane
 
-line_alt_1:
-  - jp.naver.line.android/jp.naver.line.android.basic_1
+line_black:
+  category: Alts
+  compinfos:
+    - jp.naver.line.android/jp.naver.line.android.basic_1
