--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,37 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+app_tester:
+  - dev.firebase.appdistribution/dev.firebase.appdistribution.main.MainActivity
+
+bibim_tei:
+  - com.couponapp2.chain.tac20070/com.couponapp2.chain.tac20070.SplashActivity
+
+bravie_connect:
+  - jp.co.sony.hes.home/jp.co.sony.hes.home.MainActivity
+
+deploygate:
+  - com.deploygate/com.deploygate.activity.MainActivity
+
+mufg_mdc:
+  - jp.mufg.cr.app4/jp.mufg.cr.MainActivity
+
+myjcb:
+  - jp.co.jcb.my/jp.co.jcb.my.MainActivity
+
+servo:
+  - org.servo.servoshell/org.servo.servoshell.MainActivity
+
+timee:
+  - jp.co.taimee/jp.co.taimee.ui.splash.SplashActivity
+
+vivion_card:
+  - jp.vivion.creditcard/inc.nudge.features.splash.view.SplashActivity
+
+zonepane:
+  - com.zonepane/com.twitpane.TwitPane
+
+line_black:
+  category: Alts
+  compinfos:
+    - jp.naver.line.android/jp.naver.line.android.basic_1
