add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -46,3 +46,30 @@ line_black:
   category: Alts
   compinfos:
     - jp.naver.line.android/jp.naver.line.android.basic_1
+
+bitchat:
+  - com.bitchat.droid/com.bitchat.android.MainActivity
+
+deel:
+  - com.deel.app/com.deel.app.MainActivity
+
+jumpcloud_password_manager:
+  - com.jumpcloud.pwm.android/co.myki.android.LauncherActivity
+
+lunar_crush:
+  - com.lunarcrush.app/com.lunarcrush.app.MainActivity
+
+pharmacy2u:
+  - com.kwiboo.p2urepeatsapp.android/com.kwiboo.p2urepeatsapp.android.MainActivity
+
+socios:
+  - com.socios/com.sociosmob.MainActivity
+
+solflare:
+  - com.solflare.mobile/com.solflare.mobile.MainActivity
+
+stocktwits:
+  - org.stocktwits.android.activity/org.stocktwits.android.activity.StocktwitsLauncher
+
+trainpal:
+  - com.pal.train/com.pal.common.main.TPMainActivity
