--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -73,3 +73,6 @@ stocktwits:
 
 trainpal:
   - com.pal.train/com.pal.common.main.TPMainActivity
+
+nandos:
+  - nandos.android.app/com.nandos.app.MainActivity
