add icons, premium requests

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,21 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+giant_rx:
+  - com.giantc.rx/crc64da066aa6dec7801f.MainActivity
+
+guidebook:
+  - com.guidebook.android/com.guidebook.android.app.activity.LaunchActivity
+
+innocent_witches:
+  - innocent.witches/org.renpy.android.PythonSDLActivity
+
+kalshi:
+  - com.kalshi.mobile/com.kalshi.kalshi_mobile_app.MainActivity
+
+only_mods_world:
+  - com.honeylust.onlymodsworld/org.renpy.android.PythonSDLActivity
+
+starship:
+  - xyz.starship.deliveries/xyz.starship.deliveries.MainActivity
