--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -30,3 +30,6 @@ only_mods_world:
 
 starship:
   - xyz.starship.deliveries/xyz.starship.deliveries.MainActivity
+
+samsung_visual_voicemail:
+  - com.samsung.vvm/com.samsung.vvm.views.ui.mainview.VVMApplicationAlias
