--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -33,3 +33,33 @@ starship:
 
 samsung_visual_voicemail:
   - com.samsung.vvm/com.samsung.vvm.views.ui.mainview.VVMApplicationAlias
+
+duck_detector:
+  - com.studio.duckdetector/com.studio.duckdetector.MainActivity
+
+essentials:
+  - com.sameerasw.essentials/com.sameerasw.essentials.MainActivity
+
+gamehub:
+  - com.xiaoji.egggame/com.xj.app.DeepLinkRouterActivity
+
+linkboy:
+  - com.pixelrespawn.linkboy/com.pixelrespawn.linkboy.MainActivity
+
+mexc:
+  - com.mexcpro.client/com.mexc.client.mvp.ui.activity.InitActivity
+
+morphe_manager:
+  - app.morphe.manager/app.revanced.manager.MainActivity
+
+starz:
+  - com.bydeluxe.d3.android.program.starz/com.starz.handheld.SplashActivity
+
+youtube_morphe:
+  - app.morphe.android.youtube/app.morphe.android.youtube.morphe_black_1
+
+youtube_music_morphe:
+  - app.morphe.android.apps.youtube.music/app.morphe.android.apps.youtube.music.morphe_black_1
+
+zilch:
+  - com.payzilch.app/com.payzilch.app.MainActivityDefault
