--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -63,3 +63,15 @@ youtube_music_morphe:
 
 zilch:
   - com.payzilch.app/com.payzilch.app.MainActivityDefault
+
+postbank:
+  - de.postbank.banking/com.db.dbmobile.unity.feature.splash.SplashActivity
+
+monument_valley_3:
+  - com.ustwogames.mv3/com.unity3d.player.UnityPlayerActivity
+
+total_commander_ftp_plugin:
+  - com.ghisler.tcplugins.SFTP/com.android.tcplugins.FileSystem.AboutActivity
+
+kernelsu_next:
+  - lvxeus.gasrxu.dwtdoa/lvxeus.gasrxu.dwtdoa.ui.MainActivity
