--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,66 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+giant_rx:
+  - com.giantc.rx/crc64da066aa6dec7801f.MainActivity
+
+guidebook:
+  - com.guidebook.android/com.guidebook.android.app.activity.LaunchActivity
+
+innocent_witches:
+  - innocent.witches/org.renpy.android.PythonSDLActivity
+
+kalshi:
+  - com.kalshi.mobile/com.kalshi.kalshi_mobile_app.MainActivity
+
+only_mods_world:
+  - com.honeylust.onlymodsworld/org.renpy.android.PythonSDLActivity
+
+starship:
+  - xyz.starship.deliveries/xyz.starship.deliveries.MainActivity
+
+samsung_visual_voicemail:
+  - com.samsung.vvm/com.samsung.vvm.views.ui.mainview.VVMApplicationAlias
+
+duck_detector:
+  - com.studio.duckdetector/com.studio.duckdetector.MainActivity
+
+essentials:
+  - com.sameerasw.essentials/com.sameerasw.essentials.MainActivity
+
+gamehub:
+  - com.xiaoji.egggame/com.xj.app.DeepLinkRouterActivity
+
+linkboy:
+  - com.pixelrespawn.linkboy/com.pixelrespawn.linkboy.MainActivity
+
+mexc:
+  - com.mexcpro.client/com.mexc.client.mvp.ui.activity.InitActivity
+
+morphe_manager:
+  - app.morphe.manager/app.revanced.manager.MainActivity
+
+starz:
+  - com.bydeluxe.d3.android.program.starz/com.starz.handheld.SplashActivity
+
+youtube_morphe:
+  - app.morphe.android.youtube/app.morphe.android.youtube.morphe_black_1
+
+youtube_music_morphe:
+  - app.morphe.android.apps.youtube.music/app.morphe.android.apps.youtube.music.morphe_black_1
+
+zilch:
+  - com.payzilch.app/com.payzilch.app.MainActivityDefault
+
+postbank:
+  - de.postbank.banking/com.db.dbmobile.unity.feature.splash.SplashActivity
+
+monument_valley_3:
+  - com.ustwogames.mv3/com.unity3d.player.UnityPlayerActivity
+
+total_commander_ftp_plugin:
+  - com.ghisler.tcplugins.SFTP/com.android.tcplugins.FileSystem.AboutActivity
+
+kernelsu_next:
+  - lvxeus.gasrxu.dwtdoa/lvxeus.gasrxu.dwtdoa.ui.MainActivity
