add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,18 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+aaps_client:
+  - info.nightscout.aapsclient/app.aaps.MainActivity
+
+aaps_client_2:
+  - info.nightscout.aapsclient2/app.aaps.MainActivity
+
+aaps_pump_control:
+  - info.nightscout.aapspumpcontrol/app.aaps.MainActivity
+
+mylife_app:
+  - net.sinovo.mylife.app/crc64e9c4225bc8bdbe22.SplashScreen
+
+tidepool:
+  - io.tidepool.urchin/host.exp.exponent.MainActivity
