--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -27,3 +27,9 @@ mylife_app:
 
 tidepool:
   - io.tidepool.urchin/host.exp.exponent.MainActivity
+
+sprinti:
+  - hannover.rider/via.rider.features.splash.SplashActivity
+
+shizuwall:
+  - com.arslan.shizuwall/com.arslan.shizuwall.ui.MainActivity
