--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -33,3 +33,9 @@ sprinti:
 
 shizuwall:
   - com.arslan.shizuwall/com.arslan.shizuwall.ui.MainActivity
+
+archivetune:
+  - moe.koiverse.archivetune/moe.koiverse.archivetune.MainActivity
+
+kori:
+  - org.yangdai.kori/org.yangdai.kori.MainActivity
