--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -39,3 +39,6 @@ archivetune:
 
 kori:
   - org.yangdai.kori/org.yangdai.kori.MainActivity
+
+kfc:
+  - com.kfc.it.mobileapp/com.kfc.it.mobileapp.MainActivity
