Add icons&compinfo (#1332)
* add icons, premium request

* add componentinfo

* add icons

* add componentinfo

* small fix

* small fix

* small fix

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,30 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+aaps_client:
+  - info.nightscout.aapsclient/app.aaps.MainActivity
+
+aaps_client_2:
+  - info.nightscout.aapsclient2/app.aaps.MainActivity
+
+aaps_pump_control:
+  - info.nightscout.aapspumpcontrol/app.aaps.MainActivity
+
+mylife_app:
+  - net.sinovo.mylife.app/crc64e9c4225bc8bdbe22.SplashScreen
+
+tidepool:
+  - io.tidepool.urchin/host.exp.exponent.MainActivity
+
+shizuwall:
+  - com.arslan.shizuwall/com.arslan.shizuwall.ui.MainActivity
+
+archivetune:
+  - moe.koiverse.archivetune/moe.koiverse.archivetune.MainActivity
+
+kori:
+  - org.yangdai.kori/org.yangdai.kori.MainActivity
+
+kfc:
+  - com.kfc.it.mobileapp/com.kfc.it.mobileapp.MainActivity
