new icon: Skyarc

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -39,3 +39,6 @@ kori:
 
 kfc:
   - com.kfc.it.mobileapp/com.kfc.it.mobileapp.MainActivity
+
+skyarc:
+  - ru.aeroscript.skyarc/ru.aeroscript.skyarc.presentation.splash.SplashScreen
