--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -42,3 +42,6 @@ kfc:
 
 skyarc:
   - ru.aeroscript.skyarc/ru.aeroscript.skyarc.presentation.splash.SplashScreen
+
+cube_acr_helper:
+  - com.catalinagroup.callrecorder.helper/com.catalinagroup.callrecorder.AppListActivityAlias
