add icons, premium requests

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -45,3 +45,51 @@ skyarc:
 
 cube_acr_helper:
   - com.catalinagroup.callrecorder.helper/com.catalinagroup.callrecorder.AppListActivityAlias
+
+agape:
+  - com.getdailyagape/com.getdailyagape.agape_app.MainActivity
+
+airtime:
+  - com.karrot/com.karrot.MainActivity
+
+atv_tools:
+  - dev.vodik7.atvtools/dev.vodik7.atvtools.MainActivity
+
+b_and_q:
+  - com.grapplemobile.bqclub/com.kingfisher.bq.DeepLinkActivity
+
+digg:
+  - app.digg.mobile/app.digg.mobile.MainActivity
+
+farcaster:
+  - com.farcaster.mobile/com.farcaster.mobile.MainActivity
+
+huxe:
+  - com.huxe.android.apps.huxe/com.huxe.android.apps.huxe.MainActivity
+
+lner:
+  - uk.co.icectoc.customer/co.uk.lner.screen.launch.LaunchActivity
+
+luma_events:
+  - com.luma.studio/com.luma.studio.MainActivity
+
+perk:
+  - com.travelperk/com.travelperk.LaunchActivityTkAlias
+
+root_board_game:
+  - com.direwolfdigital.root/dwd.core.android.MainActivity
+
+royal_london:
+  - com.royallondon.android/com.royallondon.android.ui.launch.LaunchActivity
+
+simple_practice:
+  - com.simplepractice.clients/com.simplepractice.clients.module.splash.SplashScreenActivity
+
+vita_mahjong:
+  - com.vitastudio.mahjong/com.meevii.vitastudio.VitaDelegateActivity
+
+voronoi:
+  - com.voronoi.organization.app/com.voronoi.app.voronoiapp.MainActivity
+
+wagamama_soul_club_rewards:
+  - com.wagamama.soulclubapp/com.wagamama.soulclubapp.MainActivity
