--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -93,3 +93,18 @@ voronoi:
 
 wagamama_soul_club_rewards:
   - com.wagamama.soulclubapp/com.wagamama.soulclubapp.MainActivity
+
+google_digital_wellbeing:
+  - com.google.android.apps.wellbeing/com.google.android.apps.wellbeing.settings.MultiPaneLauncherActivity
+
+screwfix:
+  - com.screwfix.shoppingapp/com.screwfixmobile.LaunchActivity
+
+stocktwits:
+  - org.stocktwits.android.activity/org.stocktwits.android.activity.CryptotwitsLauncher
+
+microg_re:
+  - app.revanced.android.gms/org.microg.gms.ui.SettingsActivityLauncher
+
+morphe_manager:
+  - app.morphe.manager/app.revanced.manager.MainActivity_Default
