--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -108,3 +108,6 @@ microg_re:
 
 morphe_manager:
   - app.morphe.manager/app.revanced.manager.MainActivity_Default
+
+einstein_launcher:
+  - com.eblan.launcher/com.eblan.launcher.activity.main.MainActivity
