--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -111,3 +111,18 @@ morphe_manager:
 
 einstein_launcher:
   - com.eblan.launcher/com.eblan.launcher.activity.main.MainActivity
+
+lyricify:
+  - aman.lyricify/aman.lyricify.MainActivity
+
+noti_filter:
+  - co.adityarajput.notifilter/co.adityarajput.notifilter.MainActivity
+
+spotiflac:
+  - com.zarz.spotiflac/com.zarz.spotiflac.MainActivity
+
+traffic_light:
+  - com.leekleak.trafficlight/com.leekleak.trafficlight.MainActivity
+
+wifi_password_manager:
+  - io.github.wifi_password_manager/io.github.wifi_password_manager.MainActivity
