--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -126,3 +126,9 @@ traffic_light:
 
 wifi_password_manager:
   - io.github.wifi_password_manager/io.github.wifi_password_manager.MainActivity
+
+mlauncher:
+  - app.mlauncher/com.github.codeworkscreativehub.mlauncher.MainActivity
+
+mercado_libre:
+  - com.mercadolibre/com.mercadolibre.SplashActivityAliasDefault
