--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,6 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+frank:
+  - au.com.frankhealthinsurance.app/crc64d58836315e07d2db.MainActivity
