Add NXP taginfo and tagwriter

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,9 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+nxp_taginfo:
+  - com.nxp.taginfolite/com.nxp.taginfo.activities.MainView
+
+nxp_tagwriter:
+  - com.nxp.nfc.tagwriter/com.nxp.nfc.tagwriter.activities.WelcomeScreen
