Add Goodsam Responder

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,6 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+goodsam_responder:
+  - com.goodsam.responder/com.goodsam.responder.EntryPage
