--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,6 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+frequencygenerator:
+  - com.luxdelux.frequencygenerator/com.luxdelux.frequencygenerator.activity.LauncherActivity
