add icons, premium requests

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,21 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+a2a:
+  - com.a2a.energia/com.a2a.energia.SplashActivity
+
+passione_beauty:
+  - com.passioneunghie/com.passioneunghie.MainActivity
+
+plant_parent:
+  - com.plantparentai.app/com.glority.android.picturexx.splash.SplashActivity
+
+prima_assicurazioni:
+  - it.prima/it.prima.feature.launcher.LauncherTrampolineActivity
+
+samsung_routines_plus:
+  - com.samsung.android.app.routineplus/com.samsung.android.app.routineplus.main.RoutinePlusLauncher
+
+taskforge:
+  - com.azhard.taskforge/com.azhard.taskforge.MainActivity
