--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -30,3 +30,42 @@ samsung_routines_plus:
 
 taskforge:
   - com.azhard.taskforge/com.azhard.taskforge.MainActivity
+
+deckarr:
+  - com.iregados.deckarr/com.iregados.deckarr.MainActivity
+
+futon:
+  - io.github.landwarderer.futon/io.github.landwarderer.futon.main.ui.MainActivity
+
+github_store:
+  - zed.rainxch.githubstore/zed.rainxch.githubstore.MainActivity
+
+mega_pass:
+  - mega.pwm.android.app/mega.pwm.android.app.MainActivity
+
+musly:
+  - com.devid.musly/com.devid.musly.MainActivity
+
+open_notes:
+  - com.opennotes/com.opennotes.feature_node.presentation.MainActivity
+
+pix_linear_you:
+  - com.pashapuma.pix.linear.you/com.pashapuma.pix.linear.you.activities.MainActivity
+
+proton_meet:
+  - proton.android.meet/proton.android.meet.activity.MainActivity
+
+quax:
+  - com.teskann.quax/com.teskann.quax.MainActivity
+
+sure_finance:
+  - am.sure.mobile/am.sure.mobile.MainActivity
+
+trumf:
+  - no.norgesgruppen.apps.trumf.trumf/crc647f6b29a63ed85bae.MainActivity
+
+yuzic:
+  - com.arinora.rawarr/com.arinora.rawarr.MainActivity
+
+zerocam:
+  - com.zerocam.app/com.zerocam.app.OnboardingActivity
