add icon from discord

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -69,3 +69,6 @@ yuzic:
 
 zerocam:
   - com.zerocam.app/com.zerocam.app.OnboardingActivity
+
+tela_brasil:
+  - br.gov.cultura.telabrasil/br.gov.cultura.telabrasil.MainActivity
