--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -72,3 +72,6 @@ zerocam:
 
 tela_brasil:
   - br.gov.cultura.telabrasil/br.gov.cultura.telabrasil.MainActivity
+
+animepipe:
+  - project.pipepipe.app/project.pipepipe.app.MainActivity
