add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,9 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+graph89:
+  - com.eanema.graph89/com.graph89.emulationcore.EmulatorActivity
+
+summit_credit_union:
+  - com.summitcreditunion.digital/com.lumindigital.MainActivity
