--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -18,3 +18,6 @@ graph89:
 
 summit_credit_union:
   - com.summitcreditunion.digital/com.lumindigital.MainActivity
+
+anikku:
+  - app.anikku.beta/eu.kanade.tachiyomi.ui.main.MainActivityDefault
