--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -21,3 +21,12 @@ summit_credit_union:
 
 anikku:
   - app.anikku.beta/eu.kanade.tachiyomi.ui.main.MainActivityDefault
+
+graphie:
+  - com.pavelrekun.graphie/com.pavelrekun.graphie.navigation.NavigationActivity
+
+pangolin:
+  - net.pangolin.Pangolin/net.pangolin.Pangolin.MainActivity
+
+rereminder:
+  - com.olaf.rereminder/com.olaf.rereminder.MainActivity
