--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -30,3 +30,12 @@ pangolin:
 
 rereminder:
   - com.olaf.rereminder/com.olaf.rereminder.MainActivity
+
+qksms:
+  - dev.octoshrimpy.quik.fdroid/dev.octoshrimpy.quik.feature.main.MainActivity
+
+easy_notes:
+  - me.easyapps.easynotes/com.kin.easynotes.presentation.MainActivity
+
+sprinti:
+  - hannover.rider/via.rider.activities.MapActivityKt
